<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:scrollbarSize="4dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:padding="15dp">
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/name" android:textSize="20sp"
                android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/description" android:padding="20dp"/>
        <TextView
                android:text="Ingredients:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textStyle="bold" android:id="@+id/Ingredients"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/ingredients" android:padding="20dp"/>
        <TextView
                android:text="Preparing:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:textStyle="bold" android:id="@+id/Preparing"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/preparing" android:padding="20dp">
        </LinearLayout>
        <TextView
                android:text="Images:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/images"
                android:textSize="20sp" android:textStyle="bold"/>

        <com.google.android.flexbox.FlexboxLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flexboxImages"
                app:flexWrap="wrap"
                app:alignItems="stretch"
                app:alignContent="stretch" app:flexDirection="row" app:justifyContent="center">


        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>