<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_page_fragment"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="1">


    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/logo_image"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/pizza1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:alpha="0.75"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.498"
            app:civ_border_width="0dp"
    />

    <TextView
            android:text="RecipeMaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/logo_name" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:alpha="1.0" android:textColor="@android:color/background_dark"/>


</android.support.constraint.ConstraintLayout>