<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>


    <include layout="@layout/content_main" android:id="@+id/include"/>

    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:menu_labels_style="@style/MenuLabelsStyle"
            app:menu_colorNormal="#fec111"
            app:menu_backgroundColor="#ccffffff"
            app:menu_labels_margin="5dp"

    >

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_getData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/get_recipe_circled"
                app:fab_label="Get the recipe"
                app:fab_size="mini"

        />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_circled"
                app:fab_label="Login with facebook"
                app:fab_size="mini"
        />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="shopping list"
                app:fab_size="mini"
        />


    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>