<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recipe_fragment"
             tools:context=".RecipeFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/recipes_list"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>